[tool.poetry]
name = "vibe"
version = "0.1.0"
description = ""
authors = ["anosillus <anosillus@gmail.com>"]
packages = [
    { include = "lib"},
]


[tool.poetry.dependencies]
python = "^3.7"
chumpy = "^0.70"
tqdm = "4.28.1"
yacs = "0.1.6"
h5py = "2.10.0"
numpy = "1.17.5"
scipy = "1.4.1"
numba = "0.47.0"
smplx = "0.1.26"
gdown = "3.6.4"
PyYAML = "5.3.1"
joblib = "0.14.1"
pillow = "7.1.0"
trimesh = "3.5.25"
pyrender = "0.1.36"
progress = "1.5"
filterpy = "1.4.5"
matplotlib = "3.1.3"
tensorflow = "1.*"
# tensorboard = "1.15.0"
# tensorboard = "2.*"
torchvision = "0.5"
scikit-image = "0.16.2"
scikit-video = "1.1.11"
opencv-python = "4.1.2.30"
# llvmlite = "0.32.1"

yolov3 = {git = "https://github.com/mkocabas/yolov3-pytorch.git"}
multi-person-tracker = {git = "https://github.com/mkocabas/multi-person-tracker.git"}
llvmlite = "0.32.1"
torch = "1.4.0"
pytube = {git = "https://github.com/giacaglia/pytube.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
